@@ -104,6 +104,7 @@ OperatingSystem os = DefaultNativePlatform.currentOperatingSystem
 Boolean includeLinux = os.isLinux()
 Boolean includeMacOsX = os.isMacOsX()
 Boolean includeWindows = os.isWindows()
+Boolean enableNativeAccess = JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)
 
 tasks.withType(JavaExec).configureEach { // Java runtime options:
     if (os.isMacOsX()) {
@@ -111,6 +112,9 @@ tasks.withType(JavaExec).configureEach { // Java runtime options:
     }
     classpath sourceSets.main.runtimeClasspath
     enableAssertions = true
+    if (enableNativeAccess) {
+        jvmArgs '--enable-native-access=ALL-UNNAMED' // suppress System::load() warning
+    }
     jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
 }
 
